--- a/.github/workflows/code_analysis.yaml
+++ b/.github/workflows/code_analysis.yaml
@@ -1,4 +1,4 @@
-name: deployment
+name: code analysis
 
 on:
     push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
     analysis:
-        name: build,
+        name: Build & Test,
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
@@ -25,7 +25,7 @@ jobs:
             - name: Run testing
               run: go test ./services/... -v
     static-analysis:
-        name: build,
+        name: Static Code Analysis,
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
