--- a/.github/workflows/codacy_coverage_reporter.yaml
+++ b/.github/workflows/codacy_coverage_reporter.yaml
@@ -15,3 +15,4 @@ jobs:
                   # or
                   api-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
                   coverage-reports: cover.out
+                  language: go
